@@ -40,6 +40,7 @@
 var vboxSettingsAudioDrivers = {
 		'w' : ['Null','WinMM','DirectSound'], // windows
 		'l' : ['Null','OSS','ALSA','Pulse'], // linux
+		'd' : ['Null','CoreAudio'], // darwin
 		'm' : ['Null','CoreAudio'], // mac
 		'a' : ['Null','CoreAudio'], // apple
 		'o' : ['Null','CoreAudio'], // os x
